# rCAD

./: .gitignore  Cargo.toml
crates/rcad-core/: Cargo.toml
crates/rcad-core/src/: constraint.rs  document.rs  feature.rs  history.rs  lib.rs
crates/rcad-geometry/: Cargo.toml
crates/rcad-geometry/src/: boolean.rs  brep.rs  fillet.rs  lib.rs  primitives.rs  sketch.rs  tessellation.rs
crates/rcad-io/: Cargo.toml
crates/rcad-io/src/: gltf.rs  lib.rs  obj.rs  step.rs  stl.rs  usd.rs
crates/rcad-omniverse/: Cargo.toml
crates/rcad-omniverse/src/: connector.rs  lib.rs  live_sync.rs  nucleus.rs
crates/rcad-render/: Cargo.toml
crates/rcad-render/src/: camera.rs  lib.rs  materials.rs  mesh.rs  pipeline.rs  renderer.rs  selection.rs
crates/rcad-render/src/shaders/: grid.wgsl  pbr.wgsl  picking.wgsl  wireframe.wgsl
crates/rcad-server/: Cargo.toml
crates/rcad-server/src/: main.rs
crates/rcad-server/src/api/: export.rs  import.rs  mod.rs  omniverse.rs
crates/rcad-server/src/services/: mod.rs  nucleus.rs  occt.rs
crates/rcad-wasm/: Cargo.toml
crates/rcad-wasm/src/: api.rs  bridge.rs  lib.rs
docs/: api-reference.md  architecture.md
omniverse-extension/: premake5.lua
omniverse-extension/exts/rcad.connector/: __init__.py  extension.py
omniverse-extension/exts/rcad.connector/config/: extension.toml
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Canvas.tsx  CommandPalette.tsx  ModelTree.tsx  PropertyPanel.tsx  Toolbar.tsx
web/src/hooks/: useCAD.ts  useWebGPU.ts
web/src/stores/: documentStore.ts
web/src/wasm/: loader.ts
