[package]
name = "rcad-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Geometry kernel for rCAD using truck B-Rep"

[dependencies]
rcad-core = { workspace = true }

# Truck B-Rep library
truck-modeling = { workspace = true }
truck-meshalgo = { workspace = true }
truck-topology = { workspace = true }
truck-polymesh = { workspace = true }
truck-shapeops = { workspace = true }

# Math
glam = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
parking_lot = { workspace = true }
smallvec = { workspace = true }

[features]
default = []
wasm = []
