[package]
name = "rcad-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebGPU rendering engine for rCAD"

[dependencies]
rcad-core = { workspace = true }
rcad-geometry = { workspace = true }

# Rendering
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Async
futures = { workspace = true }

# Utilities
parking_lot = { workspace = true }
smallvec = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console",
] }

[features]
default = []
wasm = ["wgpu/webgpu", "wgpu/wgsl"]
