[package]
name = "rcad-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Backend server for rCAD with OpenCASCADE and Omniverse support"

[dependencies]
rcad-core = { workspace = true }
rcad-geometry = { workspace = true }
rcad-io = { workspace = true, features = ["step"] }
rcad-omniverse = { workspace = true }

# Server framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }

# Multipart file upload
axum-extra = { version = "0.9", features = ["multipart"] }

# Temp files
tempfile = "3.10"
